# laerebogen

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DATASET_README.md  LICENSE  README.md  generate_instruction.py  makefile  prompt.txt  prompt_dk.txt  pyproject.toml  regen.json  requirements.txt  train.py  utils.py  utils_minimal.py  weight_diff.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
data/: correction_prompt.txt  creator_prompt.txt  follow_up_prompt.txt  generation_prompt.txt  grammar_correction_prompt.txt  instruction_generation_prompt.txt  output_generation_prompt.txt  quality_correction_prompt.txt  rewriter_prompt.txt  seed_tasks.jsonl
src/alpaka/: __init__.py  generate_instruction.py  ollama_utils.py
src/laerebogen/: __init__.py  constants.py  correcting.py  correction.py  data_models.py  evolving.py  filtering.py  finetuning.py  following_up.py  generation.py  ollama_utils.py  vllm_utils.py
src/scripts/: add_follow_ups.py  build_seed_task_jsonl.py  correct_dataset.py  correct_grammar_in_dataset.py  correct_quality_in_dataset.py  evolve_dataset.py  finetune_model.py  generate.py  generate_base_dataset.py  generate_dataset.py  merge_datasets.py  push_to_hub.py
