[project]
name = "laerebogen"
version = "0.0.0"
description = "Generation of a Danish instruction dataset."
readme = "README.md"
authors = [
    {name = "Dan Saattrup Smart", email = "dan.smart@alexandra.dk"},
    {name = "Sofie Helene Bruun", email = "sofie.bruun@alexandra.dk"},
]
requires-python = ">=3.11,<4.0"
dependencies = [
  "click>=8.2.1",
  "datasets>=3.4.1",
  "lingua-language-detector>=2.1.1",
  "pandas>=2.3.1",
  "pydantic>=2.11.7",
  "python-dotenv>=1.1.1",
  "ray>=2.48.0",
  "rouge-score>=0.1.2",
  "setuptools>=79.0.1",
  "torch>=2.7.1",
  "tqdm>=4.67.1",
  "transformers>=4.54.0",
  "trl>=0.20.0",
  "wandb>=0.21.0",
  "peft>=0.17.0",
  "vllm>=0.9.1; platform_system == 'Linux'",
  "bitsandbytes>=0.49.0",
  "deepspeed>=0.18.4",
]

[project.urls]
Repository = "https://github.com/alexandrainst/laerebogen"
Issues = "https://github.com/alexandrainst/laerebogen/issues"

[project.license]
file = "LICENSE"

[dependency-groups]
dev = [
  "pre-commit>=3.8.0",
  "ruff>=0.7.1",
  "pip>=24.3.1",
  "pyrefly>=0.44.2",
]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]
extend-include = [
    "*.ipynb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    # isort (imports)
    "I",
    # pydocstyle (docstrings)
    "D",
    # pycodestyle errors and warnings (PEP8)
    "E",
    "W",
    # flake-annotations (type hints)
    "ANN",
    # Pyflakes
    "F",
]
ignore = [
    # Type annotations for "self" arguments
    "ANN101",
    # Type annotations for "cls" arguments
    "ANN102",
    # Type annotations for *args
    "ANN002",
    # Type annotations for **kwargs
    "ANN003",
    # Docstrings for **kwargs
    "D417",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "F401",
]
"src/scripts/main.py" = [
    "I",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    '--cov=src/laerebogen',
    '--color=yes',
]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ImportWarning",
    "ignore::ResourceWarning",
    "ignore::FutureWarning",
]
log_cli_level = "info"
testpaths = [
    "tests",
    "src/laerebogen",
]

[tool.pyrefly]
site-package-path = [".venv/lib/python3.11/site-packages"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
